fix to make buttons visible

--- a/hopscotch/dram/static/hopscotch/hopscotch.css
+++ b/hopscotch/dram/static/hopscotch/hopscotch.css
@@ -260,5 +260,8 @@ input[type="checkbox"] {
     height:30px;
 }
 .container-fluid {
-    margin-top:50px;
+/*    margin-top:50px;
+*/}
+#checkin_form {
+    min-height:800px;
 }
